# neutrinos-community-ai-bot

./: .codegraph  .env.example  .gitignore  README.md  debug_rag.py  delete_all_today.py  delete_and_run.py  package-lock.json  pyproject.toml  test_chroma.py  users.json
.omo/: boulder.json
.omo/drafts/: neutrinos-sla-bot.md
.omo/plans/: neutrinos-sla-bot.md
.omo/run-continuation/: ses_08fcabae2fferv2F5qerkvsv8M.json  ses_08fe20099ffefsKvrS7d2fMZg7.json  ses_0900c8854ffeCCpDQrDfxBzHf6.json  ses_090251b98ffemyLyalr79KBkJB.json
.superpowers/sdd/: task-2-report.md  task-3-report.md  task-4-report.md
data/community_seed/: Community_Seed_Content.md
docs/: architecture.mmd  demo-script.md  design-doc.md  rag-design-notes.md  sla-definition.md
docs-frontend/: package-lock.json  package.json
docs-frontend/public/: codebase_graph.json
docs-frontend/src/app/: globals.css  layout.tsx  page.tsx
docs-frontend/src/components/: GraphChat.test.ts  GraphChat.tsx  Navigation.tsx
docs/superpowers/plans/: 2026-07-22-codebase-graph-chat.md
scripts/: __init__.py  check_users.py  create_users.py  delete_all_topics.py  fix_settings.py  graphify.py  seed_discourse.py  seed_test_case_3.py  unseed_discourse.py
src/neutrinos_bot/: __init__.py  confidence.py  config.py  discourse_client.py  generator.py  ingest.py  main.py  nvidia_client.py  post_back.py  rate_limit.py  retriever.py  sla_monitor.py  state.py
tests/: test_chat_api.py  test_confidence.py  test_config.py  test_e2e.py  test_graphify.py  test_ingest.py  test_sla_rules.py  test_state.py
(+13 files in other folders)
