[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutrinos-bot"
version = "0.1.0"
description = "AI SLA-Escalation Bot for Discourse"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-nvidia-ai-endpoints>=0.1.0",
    "chromadb>=0.4.22",
    "pypdf>=4.0.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[project.scripts]
neutrinos-bot = "neutrinos_bot.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
